# alga

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build-prod.sh  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
data/: com.zamkara.alga.desktop
src/: main.rs
