[package]
name = "alga"
version = "1.0.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.7" }
libadwaita = { version = "0.5", features = ["v1_2"] }
glib = "0.18"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
semver = "1.0"
